# raytracer

./: .ignorebuildCommand  CMakeLists.txt  CMakePresets.json  main.cpp  test_reflect.cpp  test_shader.cpp
src/lodepng/: lodepng.cpp  lodepng.h
src/rayimage/: Image.cpp  Image.hpp
src/raymath/: CMakeLists.txt  Color.cpp  Color.hpp  Cube.h  GenerateShapes.h  Light.h  Plane.h  Ray.h  Scene.h  Shader.h  Sphere.h  Vector3.h
